# semtree

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  welcome.yml
src/semtree/: __init__.py  cli.py  config.py  log.py  mcp.py
src/semtree/context/: __init__.py  budget.py  builder.py  levels.py
src/semtree/db/: __init__.py  schema.py  store.py
src/semtree/indexer/: __init__.py  coordinator.py  docstrings.py  extractor.py  gitblame.py  hasher.py  parser.py  walker.py
src/semtree/memory/: __init__.py  lite.py
src/semtree/retrieval/: __init__.py  intent.py  policy.py  search.py
src/semtree/scripts/: __init__.py  setup.py
tests/: conftest.py  test_context.py  test_coverage.py  test_indexer.py  test_integration.py  test_retrieval.py
