[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semtree"
version = "0.1.0"
description = "Semantic code trees for AI assistants. Index once, feed smart context to Claude, Cursor, and Copilot."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nikolas de Hor" }]
requires-python = ">=3.11"
keywords = ["ai", "context", "code-intelligence", "mcp", "claude", "copilot", "cursor", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "pathspec>=0.12",
]

[project.optional-dependencies]
parse = [
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
]
tokens = [
    "tiktoken>=0.6",
]
mcp = [
    "mcp>=1.0,<2.0",
]
all = [
    "semtree[parse]",
    "semtree[tokens]",
    "semtree[mcp]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "semtree[all]",
]

[project.scripts]
semtree = "semtree.cli:main"
semtree-mcp = "semtree.mcp:serve"

[project.urls]
Homepage = "https://github.com/nikolasdehor/semtree"
Repository = "https://github.com/nikolasdehor/semtree"
Issues = "https://github.com/nikolasdehor/semtree/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/semtree"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=semtree --cov-report=term-missing"

[tool.coverage.run]
source = ["src/semtree"]
